--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -80,8 +80,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgba(33ccffee) rgba(00ff99ee) 45deg
-    col.inactive_border = rgba(595959aa)
+    col.active_border = rgba(8b008bee) rgba(9400d3ee) 45deg
+    col.inactive_border = rgb(595959aa)
 
     layout = dwindle
 }
