config/hyprland: change inactive border color

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -81,7 +81,7 @@ general {
     gaps_out = 0
     border_size = 1
     col.active_border = rgba(8b008bee) rgba(9400d3ee) 45deg
-    col.inactive_border = rgb(595959aa)
+    col.inactive_border = rgb(3F273F) rgb(410E41) 45deg
 
     layout = dwindle
 }
