--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -80,8 +80,8 @@ general {
     gaps_in = 0
     gaps_out = 0
     border_size = 1
-    col.active_border = rgba(8b008bee) rgba(9400d3ee) 45deg
-    col.inactive_border = rgb(3F273F) rgb(410E41) 45deg
+    col.active_border = rgba(ea4c88ee) rgba(e691b1ee) 45deg
+    col.inactive_border = rgb(6F2440) rgb(734959) 45deg
 
     layout = dwindle
 }
