config/hyprland: hyprlock

--- a/config/hyprland/hyprlock.conf
+++ b/config/hyprland/hyprlock.conf
@@ -3,6 +3,25 @@ background {
   path = /home/sako/background.png
 }
 
+general {
+   no_fade_in = true
+   no_fade_out = true
+}
+
+label {
+    monitor =
+    text = $TIME
+    text_align = center # center/right or any value for default left. multi-line text alignment inside label container
+    color = rgba(200, 200, 200, 1.0)
+    font_size = 25
+    font_family = JetBrains Mono
+    rotate = 0 # degrees, counter-clockwise
+
+    position = 0, 80
+    halign = center
+    valign = center
+}
+
 input-field {
     monitor =
     size = 300, 50
