--- a/config/hyprland/hyprlock.conf
+++ b/config/hyprland/hyprlock.conf
@@ -8,6 +8,7 @@ general {
    no_fade_out = true
 }
 
+# Time 
 label {
     monitor =
     text = $TIME
@@ -25,15 +26,15 @@ label {
 input-field {
     monitor =
     size = 300, 50
-    outline_thickness = 4
+    outline_thickness = 1
     dots_size = 0.1
     dots_spacing = 0.2
     dots_center = true
-    outer_color = $accent
+    outer_color =rgb(ea4c88)
     inner_color = $surface0
     font_color = $text
     fade_on_empty = false 
-    placeholder_text = silly!
+    placeholder_text = placeholder 
     rounding = 0
     hide_input = false
     check_color = $accent
