--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -41,8 +41,8 @@ exec-once = sleep 2; nextcloud --background
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,24
-env = HYPRCURSOR_SIZE,24
+env = XCURSOR_SIZE,16
+env = HYPRCURSOR_SIZE,16
 # Hyer cursor
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
 
@@ -98,12 +98,15 @@ decoration {
       enabled = false 
       size = 3
       passes = 1
-    } 
+    }
 
-    drop_shadow = false 
-    shadow_range = 4
-    shadow_render_power = 3
-    col.shadow = rgba(1a1a1aee)
+    shadow {
+       enabled = false
+       range = 4
+       render_power = 3
+       color = rgba(1a1a1aee)
+    }
+
 }
 
 animations {
