--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -28,7 +28,7 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = hyprpaper 
 # bar
 # exec-once = /home/sako/.config/waybar/launch-waybar.sh
-exec-once = /home/sako/.config/ags/launch-ags.sh
+exec-once = sakoshell
 # notification dameon
 exec-once = mako
 # exec-once = /home/sako/.config/ags/launch-ags.sh
