--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -42,6 +42,7 @@ exec-once = sleep 2; nextcloud --background
 
 # Some default env vars.
 env = XCURSOR_SIZE,16
+env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
 env = HYPRCURSOR_SIZE,16
 # Hyer cursor
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
