--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -41,9 +41,9 @@ exec-once = sleep 2; nextcloud --background
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,16
-env = XCURSOR_THEME,catppuccin-mocha-dark-cursors
-env = HYPRCURSOR_SIZE,16
+env = XCURSOR_SIZE,20
+env = XCURSOR_THEME,Catppuccin Mocha Dark
+env = HYPRCURSOR_SIZE,20
 # Hyer cursor
 env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
 
