--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -78,11 +78,11 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 10
-    gaps_out = 10
-    border_size = 2
-    col.active_border = rgba(ea4c88ee) rgba(e691b1ee) 45deg
-    col.inactive_border = rgb(6F2440) rgb(734959) 45deg
+    gaps_in = 0
+    gaps_out = 0
+    border_size = 1
+    col.active_border = rgb(005577) rgb(005577) 45deg
+    col.inactive_border = rgb(444444) rgb(444444) 45deg
 
     layout = dwindle
 }
