--- a/config/ags/tsconfig.json
+++ b/config/ags/tsconfig.json
@@ -2,14 +2,10 @@
     "$schema": "https://json.schemastore.org/tsconfig",
     "compilerOptions": {
         "experimentalDecorators": true,
-        "strict": true,
-        "target": "ES2022",
-        "module": "ES2022",
-        "moduleResolution": "Bundler",
-        // "checkJs": true,
-        // "allowJs": true,
         "jsx": "react-jsx",
         "jsxImportSource": "/nix/store/ii2w7wv88fjvmldn8kzz8ni20kzpkld4-astal-gjs/share/astal/gjs/gtk3",
+        "module": "ES2022",
+        "moduleResolution": "Bundler",
         "paths": {
             "astal": [
                 "/nix/store/ii2w7wv88fjvmldn8kzz8ni20kzpkld4-astal-gjs/share/astal/gjs"
@@ -18,5 +14,7 @@
                 "/nix/store/ii2w7wv88fjvmldn8kzz8ni20kzpkld4-astal-gjs/share/astal/gjs/*"
             ]
         },
+        "strict": true,
+        "target": "ES2022"
     }
 }
