--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -41,11 +41,13 @@ exec-once = sleep 2; nextcloud --background
 # source = ~/.config/hypr/myColors.conf
 
 # Some default env vars.
-env = XCURSOR_SIZE,20
-env = XCURSOR_THEME,Catppuccin Mocha Dark
-env = HYPRCURSOR_SIZE,20
+env = XCURSOR_SIZE,24
+#env = XCURSOR_THEME,Catppuccin Mocha Dark
+env = XCURSOR_THEME,BreezeX-RosePine-Linux
+env = HYPRCURSOR_SIZE,24
 # Hyer cursor
-env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
+#env = HYPRCURSOR_THEME,catppuccin-mocha-dark-cursors
+env = HYPRCURSOR_THEME,rose-pine-hyprcursor
 
 # Nvidia Environment Vars
 env = LIBVA_DRIVER_NAME,nvidia
