--- a/.github/workflows/flake-update.yml
+++ b/.github/workflows/flake-update.yml
@@ -5,6 +5,9 @@ on:
     # Pi o'clock
     - cron: "0 0 * * 0"
   workflow_dispatch:
+  push:
+    branches:
+      - master
 
 jobs:
   lock-updater:
