--- a/.woodpecker/flake-update.yml
+++ b/.woodpecker/flake-update.yml
@@ -20,7 +20,7 @@ steps:
       branch: ${CI_COMMIT_BRANCH}
       base_branch: master 
       pr_title: "flake.lock: update"
-      pr_body: flake tuah update that thang 
+      pr_body: update flake.lock 
       skip_on_missing_branch: true
       close_pr_if_empty: true
       delete_branch_if_pr_empty: true
