--- a/.woodpecker/flake-update.yml
+++ b/.woodpecker/flake-update.yml
@@ -10,7 +10,7 @@ steps:
       - "nix-shell -p git --run 'git config --global user.email 'bot@sako.lol' && git config --global user.name 'sako-ci' && git commit -m \"flake.lock: update\" -a'"
   push:
     image: johnwalkerx/gitea-pull-request-create-plugin:latest
-    pull: true
+    #pull: true
     settings:
       gitea_address: https://git.sako.lol
       gitea_token:
@@ -24,5 +24,5 @@ steps:
       skip_on_missing_branch: true
       close_pr_if_empty: true
       delete_branch_if_pr_empty: true
-      merge_when_checks_succeed: true
+      merge_when_checks_succeed: false 
       delete_branch_after_merge: true
