ok this should fix it

--- a/.woodpecker/flake-update.yml
+++ b/.woodpecker/flake-update.yml
@@ -6,8 +6,7 @@ steps:
   update:
     image: ghcr.io/nixos/nix:latest
     commands:
-      - nix --experimental-features 'flakes nix-command' flake update
-      - "nix-shell -p git --run 'git config --global user.email 'bot@sako.lol' && git config --global user.name 'sako-ci' && git checkout -b flake-lock-update && git commit -m \"flake.lock: update\" -a'"
+      - "nix-shell -p git --run 'git config --global user.email 'bot@sako.lol' && git config --global user.name 'sako-ci' && git checkout -b flake-lock-update && nix --experimental-features 'flakes nix-command' flake update && git commit -m \"flake.lock: update\" -a'"
   push:
     image: johnwalkerx/gitea-pull-request-create-plugin:latest
     #pull: true
