--- a/modules/server/game/minecraft/sakopack/mods/no-chat-reports.pw.toml
+++ b/modules/server/game/minecraft/sakopack/mods/no-chat-reports.pw.toml
@@ -1,13 +1,13 @@
 name = "No Chat Reports"
-filename = "NoChatReports-FABRIC-1.21.4-v2.11.0.jar"
+filename = "NoChatReports-FABRIC-1.20.2-v2.3.1.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/qQyHxfxd/versions/9xt05630/NoChatReports-FABRIC-1.21.4-v2.11.0.jar"
+url = "https://cdn.modrinth.com/data/qQyHxfxd/versions/xQyq2W5g/NoChatReports-FABRIC-1.20.2-v2.3.1.jar"
 hash-format = "sha1"
-hash = "9fc63f45ee0f157fd161f57f2af1db20ae603918"
+hash = "cb77c14bfc458066eda3c7962c3286e0f973725e"
 
 [update]
 [update.modrinth]
 mod-id = "qQyHxfxd"
-version = "9xt05630"
+version = "xQyq2W5g"
