--- a/modules/server/game/minecraft/sakopack/mods/c2me-fabric.pw.toml
+++ b/modules/server/game/minecraft/sakopack/mods/c2me-fabric.pw.toml
@@ -1,13 +1,13 @@
 name = "Concurrent Chunk Management Engine (Fabric)"
-filename = "c2me-fabric-mc1.21.4-0.3.2+alpha.0.20.jar"
+filename = "c2me-fabric-mc1.20.2-0.2.0+alpha.11.24.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/VSNURh3q/versions/reHSALRh/c2me-fabric-mc1.21.4-0.3.2%2Balpha.0.20.jar"
+url = "https://cdn.modrinth.com/data/VSNURh3q/versions/vADXBkQ9/c2me-fabric-mc1.20.2-0.2.0%2Balpha.11.24.jar"
 hash-format = "sha1"
-hash = "2685593062e25cb0203117c821f3f017ad789f03"
+hash = "12e037a8835d170c25f62af74537cda8c6d15f4e"
 
 [update]
 [update.modrinth]
 mod-id = "VSNURh3q"
-version = "reHSALRh"
+version = "vADXBkQ9"
