--- a/modules/server/game/minecraft/sakopack/mods/chunky.pw.toml
+++ b/modules/server/game/minecraft/sakopack/mods/chunky.pw.toml
@@ -1,13 +1,13 @@
 name = "Chunky"
-filename = "Chunky-Fabric-1.4.27.jar"
+filename = "Chunky-1.3.146.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fALzjamp/versions/VkAgASL1/Chunky-Fabric-1.4.27.jar"
+url = "https://cdn.modrinth.com/data/fALzjamp/versions/NHWYq9at/Chunky-1.3.146.jar"
 hash-format = "sha1"
-hash = "db518ceda4aa3068d32242285ac9c5816b9d694a"
+hash = "b5672d69dc2b210ab2165a27afc03a424fa2b46a"
 
 [update]
 [update.modrinth]
 mod-id = "fALzjamp"
-version = "VkAgASL1"
+version = "NHWYq9at"
