--- a/modules/server/game/minecraft/sakopack/mods/debugify.pw.toml
+++ b/modules/server/game/minecraft/sakopack/mods/debugify.pw.toml
@@ -1,13 +1,13 @@
 name = "Debugify"
-filename = "Debugify-1.21.4+1.0.jar"
+filename = "Debugify-1.20.2+1.0.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/TxwUizo2/Debugify-1.21.4%2B1.0.jar"
+url = "https://cdn.modrinth.com/data/QwxR6Gcd/versions/ZSI78Xd3/Debugify-1.20.2%2B1.0.jar"
 hash-format = "sha1"
-hash = "292e5b33e3f8ecf9e26f74f1df04028a9292bcc2"
+hash = "5afa015e026de8acb4622e6e1429221e0b26e05e"
 
 [update]
 [update.modrinth]
 mod-id = "QwxR6Gcd"
-version = "TxwUizo2"
+version = "ZSI78Xd3"
