--- a/modules/server/game/minecraft/sakopack/mods/ferrite-core.pw.toml
+++ b/modules/server/game/minecraft/sakopack/mods/ferrite-core.pw.toml
@@ -1,13 +1,13 @@
 name = "FerriteCore"
-filename = "ferritecore-7.1.1-fabric.jar"
+filename = "ferritecore-6.0.1-fabric.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/uXXizFIs/versions/IPM0JlHd/ferritecore-7.1.1-fabric.jar"
+url = "https://cdn.modrinth.com/data/uXXizFIs/versions/unerR5MN/ferritecore-6.0.1-fabric.jar"
 hash-format = "sha1"
-hash = "ee08ca5fd2a7a02dbade048745533b5570a826f0"
+hash = "8fa3b84fc5860dbc30fdf8cced02af68dffcf3fa"
 
 [update]
 [update.modrinth]
 mod-id = "uXXizFIs"
-version = "IPM0JlHd"
+version = "unerR5MN"
