--- a/modules/server/game/minecraft/sakopack/mods/krypton.pw.toml
+++ b/modules/server/game/minecraft/sakopack/mods/krypton.pw.toml
@@ -1,13 +1,13 @@
 name = "Krypton"
-filename = "krypton-0.2.8.jar"
+filename = "krypton-0.2.6.jar"
 side = "both"
 
 [download]
-url = "https://cdn.modrinth.com/data/fQEb0iXm/versions/Acz3ttTp/krypton-0.2.8.jar"
+url = "https://cdn.modrinth.com/data/fQEb0iXm/versions/bRcuOnao/krypton-0.2.6.jar"
 hash-format = "sha1"
-hash = "73e792eb5f120787becda4b87b6ff18b26caea50"
+hash = "fc237a3cdf7cff71e222db8e14fa6d4546e2d000"
 
 [update]
 [update.modrinth]
 mod-id = "fQEb0iXm"
-version = "Acz3ttTp"
+version = "bRcuOnao"
