add hyprland gaps again

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -82,8 +82,8 @@ input {
 general {
     # See https://wiki.hyprland.org/Configuring/Variables/ for more
 
-    gaps_in = 0
-    gaps_out = 0
+    gaps_in = 10
+    gaps_out = 10
     border_size = 1
     col.active_border = rgb(005577) rgb(005577) 45deg
     col.inactive_border = rgb(444444) rgb(444444) 45deg
@@ -186,7 +186,7 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, foot 
 bind = $mainMod, W, killactive,
 bind = $mainMod CONTROL, M, exit,
-bind = $mainMod CONTROL, P, exec, hyprctl reload; ags quit; sakoshell
+bind = $mainMod CONTROL, P, exec, hyprctl reload
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -show-icons 
