--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -115,7 +115,7 @@ decoration {
 }
 
 animations {
-    enabled = false
+    enabled = true
 
     # Some default animations, see https://wiki.hyprland.org/Configuring/Animations/ for more
 
@@ -126,7 +126,7 @@ animations {
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
     animation = fade, 1, 7, default
-    animation = workspaces, 1, 6, default
+    animation = workspaces, 1, 6, default, slidevert
 }
 
 dwindle {
