--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -121,7 +121,7 @@ animations {
 
     bezier = myBezier, 0.05, 0.9, 0.1, 1.05
 
-    animation = windows, 1, 7, myBezier
+    animation = windows, 1, 5, default, slide left
     animation = windowsOut, 1, 7, default, popin 80%
     animation = border, 1, 10, default
     animation = borderangle, 1, 8, default
