Screw you quickshell

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -28,9 +28,9 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = hyprpaper 
 # bar
 # exec-once = /home/sako/.config/waybar/launch-waybar.sh
-#exec-once = sakoshell
+exec-once = sakoshell
 # quickshell
-exec-once = qs 
+# exec-once = qs 
 # notification dameon
 exec-once = mako
 # exec-once = /home/sako/.config/ags/launch-ags.sh
