--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -186,7 +186,7 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, foot 
 bind = $mainMod, W, killactive,
 bind = $mainMod CONTROL, M, exit,
-bind = $mainMod CONTROL, P, exec, hyprctl reload
+bind = $mainMod CONTROL, P, exec, hyprctl reload && ags quit && sakoshell
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -show-icons 
