--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -28,9 +28,9 @@ exec-once = dbus-update-activation-environment --systemd --all
 exec-once = hyprpaper 
 # bar
 # exec-once = /home/sako/.config/waybar/launch-waybar.sh
-exec-once = sakoshell
+#exec-once = sakoshell
 # quickshell
-# exec-once = qs 
+ exec-once = quickshell
 # notification dameon
 exec-once = mako
 # exec-once = /home/sako/.config/ags/launch-ags.sh
@@ -186,7 +186,7 @@ $mainMod = SUPER
 bind = $mainMod, RETURN, exec, foot 
 bind = $mainMod, W, killactive,
 bind = $mainMod CONTROL, M, exit,
-bind = $mainMod CONTROL, P, exec, hyprctl reload && ags quit && sakoshell
+bind = $mainMod CONTROL, P, exec, hyprctl reload 
 bind = $mainMod, E, exec, dolphin
 bind = $mainMod, V, togglefloating,
 bind = $mainMod, SPACE, exec, pkill rofi || rofi -show drun -show-icons 
