--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -249,3 +249,6 @@ bindl = , XF86AudioNext, exec, playerctl next
 # swaylock
 bind = $mainMod CONTROL, l, exec, hyprlock
 
+# mumble
+bind = , F10, pass, class:^(info.mumble.Mumble)$
+
