--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -250,5 +250,5 @@ bindl = , XF86AudioNext, exec, playerctl next
 bind = $mainMod CONTROL, l, exec, hyprlock
 
 # mumble
-bind = , F10, pass, class:^(info.mumble.Mumble)$
+bind = , F10, pass, ^(Mumble)$
 
