--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -30,7 +30,7 @@ exec-once = hyprpaper
 # exec-once = /home/sako/.config/waybar/launch-waybar.sh
 #exec-once = sakoshell
 # quickshell
-exec-once = qs -c shell
+ exec-once = quickshell
 # notification dameon
 exec-once = mako
 # exec-once = /home/sako/.config/ags/launch-ags.sh
