update hyprland config before flake update

--- a/config/hyprland/hyprland.conf
+++ b/config/hyprland/hyprland.conf
@@ -159,25 +159,24 @@ misc {
 # Example windowrule v2
 # windowrulev2 = float,class:^(kitty)$,title:^(kitty)$
 # See https://wiki.hyprland.org/Configuring/Window-Rules/ for more
-windowrulev2 = nomaxsize, title:^(Wine configuration)$
-windowrule = float, ^(Zoom Workplace)$
-windowrulev2 = minsize 1 1, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
-windowrulev2 = minsize 1 1, title:^(menu window)$, class:^(Zoom Workplace)$
-windowrulev2 = minsize 1 1, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
-windowrule = float, ^(zoom)$
-windowrulev2 = minsize 1 1, title:^(Zoom Workplace)$, class:^(zoom)$
-windowrulev2 = minsize 1 1, title:^(menu window)$, class:^(zoom)$
-windowrulev2 = minsize 1 1, title:^(meeting bottombar popup)$, class:^(zoom)$
-windowrulev2 = move onscreen cursor, title:^(Zoom Workplace)$, class:^(zoom)$
-windowrulev2 = move onscreen cursor, title:^(menu window)$, class:^(zoom)$
-windowrulev2 = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(zoom)$
-windowrulev2 = move onscreen cursor, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
-windowrulev2 = move onscreen cursor, title:^(menu window)$, class:^(Zoom Workplace)$
-windowrulev2 = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
-windowrulev2 = stayfocused, title:^(menu window)$, class:^(Zoom Workplace)$
-windowrulev2 = stayfocused, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
-windowrulev2 = stayfocused, title:^(menu window)$, class:^(zoom)$
-windowrulev2 = stayfocused, title:^(meeting bottombar popup)$, class:^(zoom)$
+windowrule = nomaxsize, title:^(Wine configuration)$
+windowrule = float,title:^(Zoom Workplace)$, class:^(zoom)$
+windowrule = minsize 1 1, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
+windowrule = minsize 1 1, title:^(menu window)$, class:^(Zoom Workplace)$
+windowrule = minsize 1 1, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
+windowrule = minsize 1 1, title:^(Zoom Workplace)$, class:^(zoom)$
+windowrule = minsize 1 1, title:^(menu window)$, class:^(zoom)$
+windowrule = minsize 1 1, title:^(meeting bottombar popup)$, class:^(zoom)$
+windowrule = move onscreen cursor, title:^(Zoom Workplace)$, class:^(zoom)$
+windowrule = move onscreen cursor, title:^(menu window)$, class:^(zoom)$
+windowrule = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(zoom)$
+windowrule = move onscreen cursor, title:^(Zoom Workplace)$, class:^(Zoom Workplace)$
+windowrule = move onscreen cursor, title:^(menu window)$, class:^(Zoom Workplace)$
+windowrule = move onscreen cursor, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
+windowrule = stayfocused, title:^(menu window)$, class:^(Zoom Workplace)$
+windowrule = stayfocused, title:^(meeting bottombar popup)$, class:^(Zoom Workplace)$
+windowrule = stayfocused, title:^(menu window)$, class:^(zoom)$
+windowrule = stayfocused, title:^(meeting bottombar popup)$, class:^(zoom)$
 
 # See https://wiki.hyprland.org/Configuring/Keywords/ for more
 $mainMod = SUPER
